[package]
name = "sphene"
edition = "2021"
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
poise = "0.6.1"
thorium = { path = "../thorium" }
rust-i18n = "3.0.1"
regex = "1.9.3"
lazy_static = "1.4.0"
rand = "0.9.0"
chrono = "0.4.19"