[package]
name = "thorium"
edition = "2021"
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.18", features = ["json"] }
scraper = "0.17.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0.183"